[package]
name = "feather-quic-integration-tests"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "echo_server"
path = "src/bin/echo_server.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true } 
rcgen = "0.11"
clap = { version = "4.5.21", features = ["derive"] }
directories-next = "2.0"
quinn = "0.11.7"
rustls = "0.23.25"
quinn-proto = "0.11.10"
tracing-futures = "0.2.5"
tokio = { version = "1.44.1", features = ["full"] }
rustls-pemfile = "1.0"
test-log = "0.2.17"
