[package]
name = "feather-quic-tools"
version = "0.1.0"
edition = "2021"
authors = ["swananan <jt26wzz@gmail.com>"]
description = "QUIC protocol tools and utilities"
license = "MIT"
repository = "https://github.com/swananan/feather-quic"
keywords = ["quic", "network", "protocol", "cli", "command-line-utilities"]
categories = ["network-programming", "protocols", "command-line-utilities"]

[[bin]]
name = "feather-quic-client-tool"
path = "src/client_tool.rs"

[dependencies]
feather-quic-core = { path = "../feather-quic-core" }
clap = { version = "4.5.21", features = ["derive"] }
clap-num = "1.1.1"
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true } 
